# md-fmt-rs.nvim

./: .gitignore  Makefile  README.md  justfile
doc/: hello.nvim.txt  mdfmt.txt
lua/hello/: cmd.lua  config.lua  date.lua  greeting.lua  init.lua  signature.lua  util.lua
lua/mdfmt/: bin.lua  cmd.lua  config.lua  conform.lua  cursor.lua  format.lua  init.lua  table.lua  util.lua
rust/: Cargo.toml
rust/src/: cli.rs  format.rs  lib.rs  main.rs  mdx.rs  table.rs
rust/tests/: format.rs  table.rs
rust/tests/fixtures/: kitchen-sink.mdx  math-and-link.mdx  plain.md
tests/: cursor_spec.lua  format_spec.lua  table_spec.lua
